@@ -8,6 +8,7 @@ h3. 0.6.1 unreleased
 * add 'One Page Wonder' theme from startbootstrap.com
 * add 'Round About' theme from startbootstrap.com
 * add 'Small Business' theme from startbootstrap.com
+* add 'The Big Picture' theme from startbootstrap.com
 
 h3. 0.6.0 May 10, 2015
 
